# forestry_structs

./: Cargo.toml  README.md  file_back_to_xml.xml  url_back_to_xml.xml  url_forestpropertydata.json
src/: file_structs.rs  lib.rs  main.rs  url_structs.rs
