[package]
name = "forestry_structs"
version = "0.1.0"
edition = "2024"

[dependencies]
schema_generator = "0.2.7"
quick-xml = { version = "0.37.0", features = ["serialize"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
dotenv = "0.15.0"